updating readme for some clarity