@@ -1,26 +1,57 @@
-Yeah so this will contain steps and the reason why I did it. I may miss something, drop an issue if you don't understand something. Or if there is some mistake, or you point out a grammatical mistake, feel free to point it out or drop a pull request.
+So this repository will contain:
+- How to run a program for map-reduce on hadoop
+- I will also shut down 2 datanodes will running, and see the result of it in map-reduce process
+
+I may miss something, drop an issue if you don't understand something. Or if there is some mistake, or you point out a grammatical mistake, feel free to point it out or drop a pull request.
+
 
 ## Map-Reduce
 
 Let's stop all processes and format the namenode, if there are any still going on from my previous assignments
- 1983  ./stop-all.sh 
- 1984  ./hadoop namenode -format
+- ./stop-all.sh 
+- ./hadoop namenode -format
+
 If secondarynamenode is not getting started, listen on the netstat and see if there is an address already in binding.
- 1985  netstat --listen
-Start the namenode and datanodes of hadoop
- 1986  ./start-all.sh 
- 1987  jps
- 1988  ls
-Now we run Map-reduce
- 1989  history | grep input_words
- 1990  ./hadoop jar ~/Word_classes/wordcount.jar WordCount /user/baadalvm/A4/input_words /user/baadalvm/A4/output_word11
- 1991  cd ..
- 1992  cd bin/
- 1993  ./hadoop fs -mkdir A4/input_word2
- 1994  ./hadoop fs -ls
- 1995  ./hadoop fs -put ~/input_data/bulk_names.txt  A4/input_words2
- 1996  ./hadoop fs -ls A4/
- 1997  ./hadoop jar ~/Word_classes/wordcount.jar WordCount /user/baadalvm/A4/input_words2 /user/baadalvm/A4/output_word12
- 1998  history
+- netstat --listen
+
+Start the namenode and datanodes of hadoop / running JPS will show that a data or namenode is running on that machine
+- ./start-all.sh 
+- jps
+
+Now, we run hadoop binary with a jar + from a filepath + with Class name + with location of input data as a filepath of hadoop file-system + path of the output as a filepath of hadoop file-system (+ breaks the arugments) 
+- ./hadoop jar ~/Word_classes/wordcount.jar WordCount /user/baadalvm/A4/input_words /user/baadalvm/A4/output_word11
+Make a directory in Hadoop FS (I'm gonna say it HFS from now)
+- ./hadoop fs -mkdir A4/input_word2
+List the contents for confirmation that it worked
+- ./hadoop fs -ls A4/
+```
+WARNINGs: <IGNORE THE WARNINGS>
+drwxr-xr-x   - baadalvm supergroup          0 2019-11-14 02:24 /A4/input_word2
+```
+Put the data in the HFS to use
+- ./hadoop fs -put ~/input_data/bulk_names.txt  A4/input_words2
+List the content of A4 folder in HFS
+- ./hadoop fs -ls A4/
+
+
+
+
+
+
+
+
+
+
+baadalvm@master:~/hadoop/hadoop-1.2.1/bin$ ./hadoop fs -put ~/Grades/student_records.csv  A4/grades_folder_1
+Warning: $HADOOP_HOME is deprecated.
+
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by org.apache.hadoop.security.authentication.util.KerberosUtil (file:/home/baadalvm/hadoop/hadoop-1.2.1/hadoop-core-1.2.1.jar) to method sun.security.krb5.Config.getInstance()
+WARNING: Please consider reporting this to the maintainers of org.apache.hadoop.security.authentication.util.KerberosUtil
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
+baadalvm@master:~/hadoop/hadoop-1.2.1/bin$ ./hadoop jar ~/Grades/grades.jar AverageGrade /user/baadalvm/A4/grades_folder_1 /user/baadalvm/A4/grades_folder_out_1
+
+
 
 
